# rogerrouter

./: .gitignore  .gitlab-ci.yml  AUTHORS  ChangeLog  Makefile.am  Makefile.in  NEWS  README  TODO  aclocal.m4  autogen.sh  config.h  config.h.in  config.h.meson  configure  configure.ac  create-release.sh  lcovr.sh  ltmain.sh  meson.build  meson_options.txt  meson_post_install.sh  org.tabos.roger.appdata.xml.in  org.tabos.roger.desktop.in  remove-settings.sh  roger.appdata.xml.in  roger.desktop.in  roger.doap  style.sh
cups-backend/: Makefile.am  TODO  backend-runloop.c  backend-spooldir.c  roger-backend.c  roger-backend.h
libroutermanager/: Makefile.am  TODO  action.c  action.h  address-book.c  address-book.h  appobject-emit.c  appobject-emit.h  appobject.c  appobject.h  audio.c  audio.h  bluetooth.c  bluetooth.h  call.c  call.h  connection.c  connection.h  contact.c  contact.h  csv.c  csv.h  device.c  device_fax.c  device_fax.h  device_phone.c  device_phone.h  fax_phone.c  fax_phone.h  fax_printer.h  fax_server.c  fax_spooler.c  file.c  file.h  filter.c  filter.h  ftp.c  ftp.h  gstring.c  gstring.h  (+106 more)
libroutermanager/data/: Makefile.am  meson.build  org.tabos.routermanager.gschema.xml
libroutermanager/libfaxophone/: fax.c  fax.h  faxophone.c  faxophone.h  isdn-convert.c  isdn-convert.h  phone.c  phone.h  ringtone.c  ringtone.h  sff.c  sff.h
libroutermanager/plugins/: Makefile.am  Makefile.plugins  meson.build
libroutermanager/plugins/areacodes_global/: Makefile.am  areacodes_global.c  areacodes_global.plugin.in  csv.c  csv.h  meson.build
libroutermanager/plugins/callmonitor/: Makefile.am  callmonitor.c  callmonitor.plugin.in  meson.build
libroutermanager/plugins/capi/: Makefile.am  capi.c  capi.h  capi.plugin.in  fax.c  fax.h  faxophone.c  faxophone.plugin.in  isdn-convert.c  isdn-convert.h  meson.build  org.tabos.routermanager.plugins.capi.gschema.xml  phone.c  phone.h  ringtone.c  sff.c
libroutermanager/plugins/faxophone/: faxophone.c  faxophone.plugin.in  phone.c
libroutermanager/plugins/fritzbox/: Makefile.am  README  callmonitor.c  csv.c  csv.h  firmware-04-00.c  firmware-04-00.h  firmware-04-74.c  firmware-04-74.h  firmware-05-50.c  firmware-05-50.h  firmware-06-35.c  firmware-06-35.h  firmware-common.c  firmware-common.h  firmware-plain.c  firmware-plain.h  firmware-query.c  firmware-query.h  fritzbox.c  fritzbox.h  fritzbox.plugin.in  meson.build
libroutermanager/plugins/gstreamer/: Makefile.am  gstreamer-0.10  gstreamer.c  gstreamer.plugin.in  meson.build
libroutermanager/plugins/gstreamer1/: Makefile.am  gstreamer.c  gstreamer1.plugin.in
libroutermanager/plugins/portaudio/: Makefile.am  portaudio.c
libroutermanager/plugins/pulseaudio/: Makefile.am  pulseaudio.c
libroutermanager/plugins/reverselookup/: Makefile.am  meson.build  reverselookup.c  reverselookup.h  reverselookup.plugin.in
libroutermanager/plugins/secret/: Makefile.am  Makefile.in  meson.build  secret.c  secret.h  secret.plugin.in
libroutermanager/plugins/simple_pwd/: Makefile.am  meson.build  simple_pwd.c  simple_pwd.plugin.in
libroutermanager/plugins/speedport/: Makefile.am  speedport.c  speedport.h  speedport.plugin.in
libroutermanager/plugins/webjournal/: Makefile.am  webjournal.c  webjournal.plugin.in
libroutermanager/plugins/wincred/: Makefile.am  wincred.c  wincred.plugin.in
libroutermanager/tests/: Makefile.am  action.c  call.c  tags
platform/windows/: README  build.sh  compile-dependency.sh  compile-roger.sh  create-setup.sh  meson.build  mingw-cross.txt  printer.nsh  roger.nsi.in  settings.ini  setup-mingw.sh  setup-roger.sh
platform/windows/mxe-pkgs/: adwaita-icon-theme.mk  capi.mk  glib-networking.mk  gssdp.mk  gupnp.mk  libsoup.mk  spandsp.mk
platform/windows/patches/: librsvg-2.40.1.patch  spandsp-0.0.6.patch
plugins/: meson.build
plugins/evolution/: ebook-sources.h  evolution.c  meson.build  roger-plugins-evolution.metainfo.xml.in
plugins/fritzfon/: fritzfon.c  meson.build  roger-plugins-fritzfon.metainfo.xml.in
plugins/gnotification/: gnotification.desktop.in  meson.build  roger-plugins-gnotify.metainfo.xml.in
plugins/google/: google.c  meson.build
plugins/gtknotify/: gtknotify.c  gtknotify.glade  meson.build  roger-plugins-gtknotify.metainfo.xml.in
plugins/indicator/: indicator.c  meson.build  org.tabos.roger.plugins.indicator.gschema.xml  roger-plugins-indicator.metainfo.xml.in
plugins/keychain/: keychain.c  meson.build
plugins/kwallet/: kwallet.cpp  kwallet_wrapper.cpp
plugins/osxab/: osxab.c  osxab.desktop.in
plugins/sip/: meson.build  org.tabos.roger.plugins.sip.gschema.xml  sip.c  sip.desktop.in
plugins/statusicon/: meson.build  org.tabos.roger.plugins.statusicon.gschema.xml  roger-plugins-statusicon.metainfo.xml.in  statusicon.c  statusicon.desktop.in
plugins/thunderbird/: meson.build  roger-plugins-thunderbird.metainfo.xml.in  thunderbird.c
plugins/vcard/: meson.build
plugins/webjournal/: meson.build  webjournal.c  webjournal.desktop.in
plugins/webjournal/share/: entry.html  header.html  styling.css
roger/: Makefile.am  Makefile.in  about.c  about.h  answeringmachine.c  answeringmachine.glade  answeringmachine.h  application.c  application.h  assistant.c  assistant.glade  assistant.h  authenticate.glade  contact_edit.c  contact_edit.h  contacts.c  contacts.glade  contacts.h  contactsearch.c  contactsearch.glade  contactsearch.h  crash.c  crash.h  dbus.c  dbus.h  debug.c  debug.h  debugwindow.c  debugwindow.h  extensions.glade  fax.c  fax.glade  fax.h  gd-two-lines-renderer.c  gd-two-lines-renderer.h  icons.c  icons.h  journal.c  journal.h  llevel.c  (+52 more)
roger-cli/: Makefile.am  Makefile.in  main.h  main_cli.c  meson.build
roger/data/: Makefile.in  meson.build  org.tabos.roger.gschema.xml
roger/images/: Makefile.am
roger/images/scalable/: Makefile.am
roger/plugins/: Makefile.am  Makefile.in  Makefile.plugins  meson.build
roger/plugins/fritzfon/: test.xml  (+10 more)
subprojects/librm/: TODO  gtkdoc-create.sh  meson.build  meson_options.txt  meson_post_install.sh  org.tabos.rm.gschema.xml  rm.pc.in  rmconfig.h.meson
(+1491 files in other folders)
